# punktlich-data-platform

./: Dockerfile  README.md  app.py  dbt_project.yml  profiles.yml  requirements.txt
.github/workflows/: cleanup.yml  pipeline.yml
data/: dbt.duckdb
data/bronze/: bronze_20260215_160058.parquet  bronze_20260215_193511.parquet  bronze_20260215_215353.parquet
models/gold/: agg_punctuality.sql
models/silver/: silver_departures.sql
scraper/: Cargo.toml
scraper/src/: main.rs
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate
