[package]
name = "rust_ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Pin Arrow and Parquet to 53.0.0
arrow = "53.0.0"
parquet = "53.0.0"

# pin chrono to an older version to stop the 'quarter' conflict
chrono = { version = "=0.4.31", features = ["serde"] }

serde-xml-rs = "0.6"
quick-xml = { version = "0.29", features = ["serialize"] }
duckdb = { version = "0.10.2", features = ["chrono"] }