[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Use the absolute latest versions
arrow = { version = "53.0.0", default-features = false, features = ["ffi"] }
parquet = { version = "53.0.0", default-features = false, features = ["arrow"] }

chrono = { version = "0.4.31", features = ["serde"] }

serde-xml-rs = "0.6"
quick-xml = { version = "0.29", features = ["serialize"] }
duckdb = { version = "0.10.2", features = ["chrono"] }